--- a/Tracker/Views/Events/Create.cshtml
+++ b/Tracker/Views/Events/Create.cshtml
@@ -19,7 +19,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.RaidId, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownListFor(model => model.RaidId, Model.PossibleRaids, "Select raid")
+                @Html.DropDownListFor(model => model.RaidId, Model.PossibleRaids, "Select raid", new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.RaidId)
             </div>
         </div>
@@ -27,7 +27,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.RaidDate, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.TextBoxFor(model => model.RaidDate, new {@class = "datepicker"})
+                @Html.TextBoxFor(model => model.RaidDate, new {@class = "datepicker form-control"})
                 @Html.ValidationMessageFor(model => model.RaidDate)
             </div>
         </div>
