--- a/Tracker/Views/Shared/DisplayTemplates/DateTime.cshtml
+++ b/Tracker/Views/Shared/DisplayTemplates/DateTime.cshtml
@@ -1,3 +1,8 @@
-﻿@model DateTime
+﻿@model DateTime?
 
-@Model.ToString("dd/MM/yyyy")
+@{
+    if (Model != null)
+    {
+        @Model.Value.ToString("dd-MM-yyyy")
+    }
+}
