--- a/Tracker/Views/Shared/_Layout.cshtml
+++ b/Tracker/Views/Shared/_Layout.cshtml
@@ -17,14 +17,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", null, new { @class = "navbar-brand" })
+                @Html.ActionLink("Raid Tracker", "Index", "Home", null, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Attendance", "Index", "Attendances")</li>
                     <li>@Html.ActionLink("Raids", "Index", "Raids")</li>
                     <li>@Html.ActionLink("Characters", "Index", "Characters")</li>
-                    <li>@Html.ActionLink("Attendance", "Index", "Attendances")</li>
                     <li>@Html.ActionLink("Events", "Index", "Events")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
@@ -35,7 +34,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Nero Sule</p>
         </footer>
     </div>
 
