--- a/Tracker/Views/Shared/_SharedScripts.cshtml
+++ b/Tracker/Views/Shared/_SharedScripts.cshtml
@@ -1,7 +1,7 @@
 ﻿<script>
     $(function() {
         $('.datepicker').datepicker({
-            format: 'dd/mm/yyyy',
+            format: 'dd-mm-yyyy',
             todayButton: 'linked',
             todayHighlight: true,
             weekStart: 1
