--- a/Tracker/Views/Characters/Edit.cshtml
+++ b/Tracker/Views/Characters/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Core.Domain.Character
+﻿@model Tracker.Features.Characters.Model.CharacterFieldsModel
 
 @{
     ViewBag.Title = "Edit";
@@ -20,7 +20,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Name, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Name)
+                @Html.TextBoxFor(model => model.Name, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Name)
             </div>
         </div>
@@ -28,7 +28,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Class, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Class)
+                @Html.DropDownListFor(model => model.Class, Model.PossibleClasses, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Class)
             </div>
         </div>
@@ -36,30 +36,14 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Race, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Race)
+                @Html.DropDownListFor(model => model.Race, Model.PossibleRaces, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Race)
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Created, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Created)
-                @Html.ValidationMessageFor(model => model.Created)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Modified, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Modified)
-                @Html.ValidationMessageFor(model => model.Modified)
-            </div>
-        </div>
-
-        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-success" />
             </div>
         </div>
     </div>
